src/objects/Person_Organisation_Association__c.object
<CustomObject>
    <description>Links a person to an organisation/partner/farmer group/account/whatever the hell we are calling them</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date that the releationship ended</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Person Organisation Associations</relationshipLabel>
        <relationshipName>Person_Organisation_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Person Organisation Associations</relationshipLabel>
        <relationshipName>Person_Organisation_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that we captured the link between these entities</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Person Organisation Association</label>
    <nameField>
        <displayFormat>POA-{0000000}</displayFormat>
        <label>Person Organisation Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Organisation Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>